@@ -1,3 +1,5 @@
+24.sep (lv)
+      - add MusicXML testfile for issue 12382 ("Key Signature for 2 Staves")
 23.sep (ws)
       - implement flip command ("x") for tenuto and staccato articulation symbols.
         Flip changes anchor position note head <-> stem
